@@ -7,6 +7,7 @@ New features
 Bug fixes
 ~~~~~~~~~
 - #2248: robustness in datamodel unicode upgrade
+- #2249: new DateTime List field
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
